# AI_personal_trainer_and_dietitian

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  config.py  database.py  db.py  dependencies.py  main.py  schemas.py
backend/app/api/: __init__.py  health.py  router.py  routes.py
backend/app/api/routes/: __init__.py  day_logs.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py
backend/app/models/: schemas.py
backend/app/repositories/: __init__.py  day_log_repository.py  strava_repository.py
backend/app/routers/: strava.py
backend/app/schemas/: __init__.py  strava.py
backend/app/services/: __init__.py  ai_client.py  day_log_service.py  draft_pipeline.py  glucose_service.py  meal_draft_service.py  nutrition.py  strava_client.py  strava_sync.py  strava_sync_service.py  token_crypto.py  upload_storage.py
backend/tests/: __init__.py  conftest.py  test_assistant_draft.py  test_database.py  test_day_aggregate.py  test_glucose_uploads.py  test_health.py  test_integration_api.py  test_meal_persistence.py  test_strava_router.py  test_strava_sync_service.py
docs/: api-contract.md  backend-ai-log.md  foundation-scaffold.md  frontend-day-log-assumptions.md  implementation-plan.md  integration-hardening.md  parallel-worktree-prompts.md
docs/integrations/: strava-sync.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  DayLogPage.tsx  index.css  styles.css  types.ts
frontend/src/__tests__/: DayLogPage.test.tsx
frontend/src/adapters/: mockDayLogApi.ts
frontend/src/api/: client.ts
frontend/src/components/: ActivityPanel.tsx  AssistantComposer.tsx  DailyTotalsCard.tsx  DaySelector.tsx  DraftPreview.tsx  GlucoseUploadPanel.tsx  MealSection.tsx
frontend/src/fixtures/: dayLogFixtures.ts
frontend/src/hooks/: useDayLog.ts
frontend/src/utils/: date.ts  meal.ts
