[project]
name = "personal-endurance-trainer-log"
version = "0.1.0"
description = "Single-user, local-first daily log for meals, Strava activities, and glucose screenshots."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "openai>=1.65.5,<2.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.13.0,<0.14.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py"]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
